# ad-astra

./: README.md
ad_astra_compiletime/: Cargo.toml
ad_astra_compiletime/src/: lib.rs
ad_astra_compiletime/tests/: test_panini.rs  test_simple_sexpr.rs
ad_astra_runtime/: Cargo.toml
ad_astra_runtime/src/: lib.rs  macros.rs
ad_astra_runtime/tests/: test_panini.rs  test_simple_sexpr.rs
