[package]
name = "ad-astra"
version = "0.0.0"
authors = ["Piotr Czarnecki <pioczarn@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
